- Improved: Removed styles from address book. Added class for default billing/shipping address (Ticket #207)
- Fixed start & stop publishing dates not working
- Fixed Authorize.net failed transaction bug
- Fixed enter key trapping on checkout payment method
- Fixed coupon re-apply by adding BINARY keyword to SQL query searching for coupon code (Ticket #476)
- Removed pre-0.1 update code from runonce.php
- Removed postsale_mail from Paypal and Postfinance
- Removed obsolete table tl_payment_options
- Removed obsolete table tl_filter_values_to_categories
- Removed moduleOperations callback from payment and shipping modules. The same can be achieved through standard DCA operations.

Version 0.2.10 (2011-06-??)
------------------------------
- Added support for Contao 2.10 "structure" event (see http://dev.contao.org/issues/2504)
- Added shipping & payment method filter to orders
- Added: includeBlankOption=true for select options using foreignKey (Ticket #292)
- Added product sku to filter module
- Fixed error message when editing page category (Ticket #469)
- Fixed IsotopeProductCollection::getProducts database caching
- Changed tl_iso_products::getCategoryList from private to protected function (Ticket #477)

Version 0.2.9 (2011-05-23)
------------------------------
- Improved: Show disabled shipping and payment modules on frontend preview
- Improved Postfinance payment module with new authentication method (Ticket #235)
- Improved: Only add href_reader if field is available in product collection items table (Ticket #453)
- Fixed bug when products have no SKU
- Fixed product rules bug with member limits (Ticket #409)
- Fixed specialchars in image gallery and checkout steps (Ticket #426)
- Fixed issue when product alias starts with a digit (Ticket #452)
- Fixed empty option value ##cart_text## (Ticket #418)

Version 0.2.8 (2011-05-09)
------------------------------
- Added import/export option for mail templates
- Added quantity_requested to product template